# mini-coding-agent

./: .env.example  .gitignore  REV_ENGINEERING.md  mini_coding_agent.py  pyproject.toml
tests/: test_mini_coding_agent.py
